<resources>
    <string name="app_name">Foody</string>
    <string name="splash_icon">splash icon</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="plan_your_week">Plan Your Week</string>
    <string name="frst_onboarding_screen_desription">Get your favorites meals handy</string>
    <string name="image">image</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="save_recipes_for_offline_use_and_cook_even_without_an_internet_connection">Save recipes for offline use and cook\n even without an internet connection</string>
    <string name="back">back</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="let_s_get_spicy_log_in_to_your_meal_plan">Let\'s get spicy! Log in to your meal plan.</string>
    <string name="enter_your_emaiil">Enter your emaiil</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="cook_everywhere">Cook Everywhere</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="or_continue_with">Or contunie with</string>
    <string name="join_now">Join now</string>
    <string name="register">Register</string>
    <string name="by_signing_up_you_agree_to_our_terms_of_service_and_privacy_policy">By signing up, you agree to our Terms of Service and Privacy Policy.</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="plan_your_weekly_meals_and_discover_new_recipes_join_our_community_of_food_lovers_today">Plan your weekly meals and discover new recipes. Join our community of food lovers today.</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="new_to_foody">New to Foody?</string>
    <string name="ok">OK</string>
    <string name="join_as_gust">Join as gust</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="facebook_app_id">REPLACE WITH YOUR APP ID</string>
    <string name="facebook_client_token">REPLACE WITH YOUR APP CLIENT TOKEN</string>
    <string name="popular_meal_image">Popular Meal Image</string>
    <string name="search_categories">Search categories</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="notifications">Notifications</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="home">Home</string>
    <string name="plan">PLan</string>
    <string name="favorite">Favorite</string>
    <string name="categories">Categories</string>
    <string name="amazing_chief">Amazing chief</string>
    <string name="guest_user">Guest</string>
    <string name="watch_how_to_make_perfect">"Watch: How to make perfect "</string>
    <string name="video_tutorial">Video Tutorial</string>
    <string name="search_for_your_favorite_meals">Search for your favorite meals</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="lunch">LUNCH</string>
    <string name="dinner">DINNER</string>
    <string name="no_breakfast_planned">No breakfast planned</string>
    <string name="no_lunch_planned">No lunch planned</string>
    <string name="no_dinner_planned">No dinner planned</string>
    <string name="remove_from_favorite">Remove From Favorite</string>
    <string name="remove">Remove</string>
    <string name="details">details</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet_message">Please check your internet connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="ingredient">ingredient</string>
</resources>