<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterFragment">

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/extra_large_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <ImageView
                    android:id="@+id/register_Back_btn"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:contentDescription="@string/register"
                    android:src="@drawable/outline_arrow_back_ios_24"

                    />

                <TextView
                    android:id="@+id/register_back_to_login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="336dp"
                    android:background="@drawable/rounded_corner_shape"
                    android:backgroundTint="@color/primary"
                    android:clickable="true"
                    android:gravity="end"
                    android:text="@string/login"
                    android:textColor="@color/white" />
            </RelativeLayout>


            <ImageView
                android:id="@+id/register_img"
                android:layout_width="wrap_content"
                android:scaleType="centerInside"
                android:layout_height="120dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:src="@drawable/login_logo"/>


            <TextView
                android:layout_marginTop="32dp"
                android:text="@string/create_account"
                android:textColor="@color/primary"
                android:textSize="@dimen/extra_large_text_size"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />

            <TextView
                android:layout_marginTop="8dp"
                android:text="@string/plan_your_weekly_meals_and_discover_new_recipes_join_our_community_of_food_lovers_today"
                android:textColor="@color/primary"
                android:textSize="@dimen/medium_text_size"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />


            <TextView
                android:layout_marginTop="@dimen/large_padding"
                android:text="@string/full_name"
                android:textColor="@color/secondary"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_ustername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_full_name"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:layout_marginTop="@dimen/medium_padding"
                android:text="@string/email"
                android:textColor="@color/secondary"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_emaiil"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:layout_marginTop="@dimen/medium_padding"
                android:text="@string/password"
                android:textColor="@color/secondary"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:ems="10"
                android:inputType="text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_btn"
                android:layout_marginTop="@dimen/large_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/primary"
                android:text="@string/register"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner_shape"
                />
            <LinearLayout
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="@dimen/medium_padding"
                android:weightSum="3"
                android:layout_marginHorizontal="4dp"
                >

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="2dp"
                    />

                <TextView
                    android:id="@+id/contunio_with_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/or_contention_with"
                    android:gravity="center|center_vertical"
                    />
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="2dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/register_social_btn_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/google_register_btn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="@dimen/medium_padding"
                    android:layout_weight="1"
                    android:backgroundTint="@color/background"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:paddingTop="@dimen/medium_padding"
                    android:paddingBottom="@dimen/medium_padding"
                    android:text="@string/google"
                    android:textColor="@color/white"
                    app:cornerRadius="@dimen/medium_padding"
                    app:icon="@drawable/google"
                    app:iconTint="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/facebook_register_btn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="@dimen/medium_padding"
                    android:layout_weight="1"
                    android:backgroundTint="@color/background"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/white"
                    android:gravity="center"
                    android:paddingTop="@dimen/medium_padding"
                    android:paddingBottom="@dimen/medium_padding"
                    android:text="@string/facebook"
                    android:textColor="@color/white"
                    app:cornerRadius="@dimen/medium_padding"
                    app:icon="@drawable/facebook_logo"
                    app:iconTint="@color/white" />
            </LinearLayout>

            <TextView
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/by_signing_up_you_agree_to_our_terms_of_service_and_privacy_policy"
                android:textColor="@color/secondary"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

        </LinearLayout>
</ScrollView>