<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FirstOnboardingScreenFragment"
    android:orientation="vertical"
    android:background="@color/primary_dark"
    android:paddingBottom="?attr/actionBarSize"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/skip_tv"
            android:fontFamily="@font/agbalumo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:letterSpacing="0.06"
            android:gravity="end"
            android:text="@string/skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/rounded_corner_shape"
            android:clickable="true"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/first_onboarding_image"
            android:layout_width="match_parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
            android:layout_height="409dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skip_tv"
            tools:src="@drawable/fried_chicken_with_vegetables_herbs_aluminum_skillet"
            android:layout_marginHorizontal="8dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_onboarding_image"
            app:layout_constraintVertical_bias="0.737"
            android:layout_marginTop="@dimen/medium_padding"
            >

            <TextView
                android:id="@+id/header_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agbalumo"
                android:gravity="center"
                android:textColor="@color/secondary"
                android:text="@string/plan_your_week"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary"
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/agbalumo"
                android:gravity="center"
                android:lines="3"
                android:text="@string/frst_onboarding_screen_desription" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next_btn"
                android:layout_width="match_parent"
                android:clickable="true"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_shape"
                android:text="@string/next"
                android:backgroundTint="@color/primary"
                android:layout_marginHorizontal="32dp"
                android:paddingVertical="20dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>





</ScrollView>