<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FirstOnboardingScreenFragment"
    android:orientation="vertical"
    android:layout_margin="0dp"
    android:paddingBottom="24dp"
    android:background="@color/background"
    >


    <TextView
        android:id="@+id/skip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:gravity="end"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded_corner_shape"
        android:backgroundTint="@color/primary"
        android:clickable="true"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/second_onboarding_image"
        android:layout_width="match_parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
        android:layout_height="409dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skip_tv"
        tools:src="@drawable/dishes_brown_surface"
        android:layout_marginHorizontal="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.737">

        <TextView
            android:id="@+id/header_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/agbalumo"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="Cook Everywhere"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/agbalumo"
            android:gravity="center"
            android:lines="3"
            android:text="@string/save_recipes_for_offline_use_and_cook_even_without_an_internet_connection"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/get_started_btn"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_shape"
            android:text="@string/get_started"
            android:backgroundTint="@color/secondary"
            android:layout_marginHorizontal="32dp"
            android:paddingVertical="20dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>